docs/0.16/_sources/api/gammapy.data.Observation.rst.txt
Observation
===========

.. currentmodule:: gammapy.data

.. autoclass:: Observation
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Observation.fixed_pointing_info
      ~Observation.muoneff
      ~Observation.observation_dead_time_fraction
      ~Observation.observation_live_time_duration
      ~Observation.observation_time_duration
      ~Observation.observatory_earth_location
      ~Observation.pointing_altaz
      ~Observation.pointing_radec
      ~Observation.pointing_zen
      ~Observation.target_radec
      ~Observation.tstart
      ~Observation.tstop

   .. rubric:: Methods Summary

   .. autosummary::

      ~Observation.create
      ~Observation.from_caldb
      ~Observation.peek

   .. rubric:: Attributes Documentation

   .. autoattribute:: fixed_pointing_info
   .. autoattribute:: muoneff
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: pointing_altaz
   .. autoattribute:: pointing_radec
   .. autoattribute:: pointing_zen
   .. autoattribute:: target_radec
   .. autoattribute:: tstart
   .. autoattribute:: tstop

   .. rubric:: Methods Documentation

   .. automethod:: create
   .. automethod:: from_caldb
   .. automethod:: peek
